--- a/src/DúvidasAjuda.html
+++ b/src/DúvidasAjuda.html
@@ -46,7 +46,9 @@
             <h1 class="">Dúvidas Frequentes</h1>
             <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, ut.</p>
 
+            <!--Dúvidas-->
             <div class="accordion" id="accordionPanelsStayOpenExample">
+                <!--Dúvida 1-->
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -66,17 +68,18 @@
                         </div>
                     </div>
                 </div>
+                <!--Dúvida 2-->
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
                             aria-controls="panelsStayOpen-collapseTwo">
-                            Como eu faço para agendar uma lavagem do meu veículo?
+                            Como eu faço para agendar uma limpeza do meu veículo?
                         </button>
                     </h2>
                     <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
+                            <strong>Agendamento da lmpeza.</strong> It is hidden by default, until
                             the collapse plugin adds the appropriate classes that we use to style each element. These
                             classes control the overall appearance, as well as the showing and hiding via CSS
                             transitions. You can modify any of this with custom CSS or overriding our default variables.
@@ -85,6 +88,7 @@
                         </div>
                     </div>
                 </div>
+                <!--Dúvida 3-->
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -104,17 +108,18 @@
                         </div>
                     </div>
                 </div>
+                <!--Dúvida 4-->
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
-                            aria-controls="panelsStayOpen-collapseThree">
-                            Dúvida #3
+                            data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseFour">
+                            Como alterar o veículo para limpeza?
                         </button>
                     </h2>
-                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+                    <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
+                            <strong>Perfil.</strong> It is hidden by default, until the
                             collapse plugin adds the appropriate classes that we use to style each element. These
                             classes control the overall appearance, as well as the showing and hiding via CSS
                             transitions. You can modify any of this with custom CSS or overriding our default variables.
@@ -123,17 +128,18 @@
                         </div>
                     </div>
                 </div>
+                <!--Dúvida 5-->
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
-                            aria-controls="panelsStayOpen-collapseThree">
-                            Dúvida #3
+                            data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseFive">
+                            Como fazer um comentário no processo da limpeza?
                         </button>
                     </h2>
-                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+                    <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
+                            <strong>Observações.</strong> It is hidden by default, until the
                             collapse plugin adds the appropriate classes that we use to style each element. These
                             classes control the overall appearance, as well as the showing and hiding via CSS
                             transitions. You can modify any of this with custom CSS or overriding our default variables.
@@ -142,17 +148,18 @@
                         </div>
                     </div>
                 </div>
+                <!--Dúvida 6-->
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
-                            aria-controls="panelsStayOpen-collapseThree">
-                            Dúvida #3
+                            data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseSix">
+                            Quais formas de pagamento são aceitas?
                         </button>
                     </h2>
-                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+                    <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
+                            <strong>Formas de pagamento.</strong> It is hidden by default, until the
                             collapse plugin adds the appropriate classes that we use to style each element. These
                             classes control the overall appearance, as well as the showing and hiding via CSS
                             transitions. You can modify any of this with custom CSS or overriding our default variables.
@@ -167,6 +174,11 @@
         <div id="ajuda">
             <h1>Ajuda</h1>
             <p>Caso nenhuma das "Dúvidas Frequentes" citadas anteriormente tenham sanada a sua pergunta</p>
+
+            <div class="col-12 col-lg-5 mx-0 mx-lg-4 ms-4 ms-lg-0 pt-1 border text-center rounded">
+                <h4>Digite sua dúvida.</h4>
+                <textarea class="form-control mb-3 obs" id="exampleFormControlTextarea1" rows="5"></textarea>
+              </div>
         </div>
 
     </main>
