--- a/src/template.html
+++ b/src/template.html
@@ -28,11 +28,12 @@
         <!--Opções-->
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
           <button type="button" class="btn btn-outline-light">Início</button>
-          <button type="button" class="btn btn-outline-light">Perfil</button>
           <button type="button" class="btn btn-outline-light"
-            onclick="window.location.href = 'Agendamento.html'">Agendar</button>
+          onclick="window.location.href = 'Agendamento.html'">Agendar</button>
           <button type="button" class="btn btn-outline-light"
-            onclick="window.location.href = 'Login.html'">Login</button>
+          onclick="window.location.href = 'Login.html'">Login</button>
+          <button type="button" class="btn btn-outline-light"
+            onclick="window.location.href = 'Perfil.html'">Perfil</button>
         </div>
 
       </div>
@@ -87,10 +88,10 @@
           <li>
             <p>Outros links úteis</p>
           </li>
-          <li><a href="#" class="info">Quem somos</a></li>
-          <li><a href="#" class="info">Ajuda</a></li>
-          <li><a href="#" class="info">Dúvidas frequentes</a></li>
-          <li><a href="#" class="info">Termos de privacidade</a></li>
+          <li><a href="QuemSomos.html" class="info">Quem somos</a></li>
+          <li><a href="DúvidasAjuda.html" class="info">Ajuda</a></li>
+          <li><a href="DúvidasAjuda.html" class="info">Dúvidas frequentes</a></li>
+          <li><a href="termosdeprivacidade.html" class="info">Termos de privacidade</a></li>
         </ul>
       </div>
 
