--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <!--Opções-->
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
           <button type="button" class="btn btn-outline-light">Início</button>
-          <button type="button" class="btn btn-outline-light">Perfil</button>
+          <a href="http://127.0.0.1:5500/src/Perfil.html">  <button type="button" class="btn btn-outline-light">Perfil</button></a>
           <button type="button" class="btn btn-outline-light"
             onclick="window.location.href = 'Agendamento.html'">Agendar</button>
           <button type="button" class="btn btn-outline-light"
@@ -341,9 +341,8 @@ img {vertical-align: middle;}
 
 
 
-
 <script>
-
+//função para mudar slides
 let slideIndex = 0;
 showSlides();
 
@@ -361,7 +360,7 @@ function showSlides() {
   }
   slides[slideIndex-1].style.display = "block";  
   dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 3000); // Mudar imagem a cada 3 segundos
+  setTimeout(showSlides, 4000); // mudar imagem a cada 4 segundos
 }
 
 </script>
