--- a/src/Administrador.html
+++ b/src/Administrador.html
@@ -71,163 +71,8 @@
             <h1>Serviços Concluídos</h1>
             <div id="cardContainer" class="row"></div>
 
-            <!--<div class="row">
-                <div class="col-md-4">
-                    <div class="card-hidden">
-                        <div class="card-body">
-                            <h5 class="card-title">Nome do Cliente</h5>
-                            <p class="card-text">Modelo do Carro: Modelo XYZ</p>
-                            <p class="card-text">Placa do Carro: XXX-1234</p>
-                            <p class="card-text">Dia da Lavagem: 02/01/2023</p>
-                            <div class="mt-4">
-                                <textarea class="form-control" rows="4" placeholder="bla bla bla bla bla"></textarea>
-                            </div>
-
-                            <div class="mt-4">
-                                <img src="star-rating.png" alt="Estrelas de Avaliação">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card-hidden">
-                        <div class="card-body">
-                            <h5 class="card-title">Nome do Cliente</h5>
-                            <p class="card-text">Modelo do Carro: Modelo XYZ</p>
-                            <p class="card-text">Placa do Carro: XXX-1234</p>
-                            <p class="card-text">Dia da Lavagem: 02/01/2023</p>
-                            <div class="mt-4">
-                                <textarea class="form-control" rows="4" placeholder="bla bla bla bla bla"></textarea>
-                            </div>
-
-                            <div class="mt-4">
-                                <img src="star-rating.png" alt="Estrelas de Avaliação">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card-hidden">
-                        <div class="card-body">
-                            <h5 class="card-title"></h5>
-                            <p class="card-text">Modelo do Carro: Modelo XYZ</p>
-                            <p class="card-text">Placa do Carro: XXX-1234</p>
-                            <p class="card-text">Dia da Lavagem: 02/01/2023</p>
-                            <div class="mt-4">
-                                <textarea class="form-control" rows="4" placeholder="bla bla bla bla bla"></textarea>
-                            </div>
-
-                            <div class="mt-4">
-                                <img src="star-rating.png" alt="Estrelas de Avaliação">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card-hidden">
-                        <div class="card-body">
-                            <h5 class="card-title">Nome do Cliente</h5>
-                            <p class="card-text">Modelo do Carro: Modelo XYZ</p>
-                            <p class="card-text">Placa do Carro: XXX-1234</p>
-                            <p class="card-text">Dia da Lavagem: 02/01/2023</p>
-                            <div class="mt-4">
-                                <textarea class="form-control" rows="4" placeholder="bla bla bla bla bla"></textarea>
-                            </div>
-
-                            <div class="mt-4">
-                                <img src="estrelas" alt="Estrelas de Avaliação">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card-hidden">
-                        <div class="card-body">
-                            <h5 class="card-title">Nome do Cliente</h5>
-                            <p class="card-text">Modelo do Carro: Modelo XYZ</p>
-                            <p class="card-text">Placa do Carro: XXX-1234</p>
-                            <p class="card-text">Dia da Lavagem: 02/01/2023</p>
-                            <div class="mt-4">
-                                <textarea class="form-control" rows="4" placeholder="bla bla bla bla bla"></textarea>
-                            </div>
-
-                            <div class="mt-4">
-                                <img src="estrelas" alt="Estrelas de Avaliação">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card-hidden">
-                        <div class="card-body">
-                            <h5 class="card-title">Nome do Cliente</h5>
-                            <p class="card-text">Modelo do Carro: Modelo XYZ</p>
-                            <p class="card-text">Placa do Carro: XXX-1234</p>
-                            <p class="card-text">Dia da Lavagem: 02/01/2023</p>
-                            <div class="mt-4">
-                                <textarea class="form-control" rows="4" placeholder="bla bla bla bla bla"></textarea>
-                            </div>
-
-                            <div class="mt-4">
-                                <img src="estrelas" alt="Estrelas de Avaliação">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card-hidden">
-                        <div class="card-body">
-                            <h5 class="card-title">Nome do Cliente</h5>
-                            <p class="card-text">Modelo do Carro: Modelo XYZ</p>
-                            <p class="card-text">Placa do Carro: XXX-1234</p>
-                            <p class="card-text">Dia da Lavagem: 02/01/2023</p>
-                            <div class="mt-4">
-                                <textarea class="form-control" rows="4" placeholder="bla bla bla bla bla"></textarea>
-                            </div>
-
-                            <div class="mt-4">
-                                <img src="estrelas" alt="Estrelas de Avaliação">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card-hidden">
-                        <div class="card-body">
-                            <h5 class="card-title">Nome do Cliente</h5>
-                            <p class="card-text">Modelo do Carro: Modelo XYZ</p>
-                            <p class="card-text">Placa do Carro: XXX-1234</p>
-                            <p class="card-text">Dia da Lavagem: 02/01/2023</p>
-                            <div class="mt-4">
-                                <textarea class="form-control" rows="4" placeholder="bla bla bla bla bla"></textarea>
-                            </div>
-
-                            <div class="mt-4">
-                                <img src="estrelas" alt="Estrelas de Avaliação">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card-hidden">
-                        <div class="card-body">
-                            <h5 class="card-title">Nome do Cliente</h5>
-                            <p class="card-text">Modelo do Carro: Modelo XYZ</p>
-                            <p class="card-text">Placa do Carro: XXX-1234</p>
-                            <p class="card-text">Dia da Lavagem: 02/01/2023</p>
-                            <div class="mt-4">
-                                <textarea class="form-control" rows="4" placeholder="bla bla bla bla bla"></textarea>
-                            </div>
-
-                            <div class="mt-4">
-                                <img src="estrelas" alt="Estrelas de Avaliação">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>-->
             <div class="mt-4">
-                <button class="btn btn-primary" id="ver-mais">Ver Mais</button>
+                <button class="btn btn-primary" id="ver-mais">Ver Avaliações</button>
             </div>
             <div class="toggle-buttons">
 
